--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio | Full Stack Developer</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <!-- Header Section  -->
@@ -50,16 +51,16 @@
         <h2>My Projects</h2>
         <article>
           <h3>Weather Dashboard</h3>
-          <img src="assets/images/weather (1).jpg" alt="Project One" width="300" height="250"/>
+          <img src="assets/images/weather_img.avif" alt="Project One" width="300" height="250"/>
           <p>
             A responsive weather dashboard that provides real-time weather information, featuring dynamic data fetching and a user-friendly interface.
           </p>
         </article>
         <article>
-          <h3>Team Profile Generator</h3>
-          <img src="assets/images/team-sample (1).png" alt="Project Two" width="300" height="250"/>
+          <h3>Work-day-schedular</h3>
+          <img src="assets/images/work_schdule_img.png" alt="Project Two" width="300" height="250"/>
           <p>
-           Empower's team identity with Team profile generator. A user friendly tool designed for quick and concise team introductions.
+           A productivity tool that helps users organize their tasks with features like due dates, priority levels, and progress tracking. Features a clean, intuitive interface.
           </p>
         </article>
       </section>
@@ -108,7 +109,7 @@
         </div>
       </section>
     </main>
-    <!-- Footer  -->
+    <!-- Footer Section -->
     <footer>
       <p>&copy; 2025 Rashid Subhani. All Rights Reserved.</p>
       <p>Portfolio created with HTML and CSS</p>
