readme.md updated & responsive section done

--- a/index.html
+++ b/index.html
@@ -68,13 +68,12 @@
       <!-- Contact Section  -->
       <section id="contact">
         <h2>Get In Touch</h2>
-        <h3>Contact Information</h3>
         <div class="contact-text">
-          <h4>Email</h4>
+            <h4>📧 Email</h4>
           <a href="mailto:ras.sub2003@gmail.com">ras.sub2003@gmail.com</a>
         </div>
         <div class="contact-text">
-          <h4>Phone</h4>
+            <h4>📞 Phone</h4>
           <a href="tel:+447727868797">+44-7727-868797</a>
         </div>
         <div class="contact-form">
@@ -112,7 +111,6 @@
     <!-- Footer Section -->
     <footer>
       <p>&copy; 2025 Rashid Subhani. All Rights Reserved.</p>
-      <p>Portfolio created with HTML and CSS</p>
     </footer>
   </body>
 </html>
